--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-24 02:11:27
+lastsearch = 2024-07-24 02:31:18
 
 [www.diepxuan.com]
 match = -6.7%%
@@ -42,9 +42,9 @@ title = Đèn LED Spotlight Âm Trần 8091 - HT Max Light
 url = https://www.htlightlevel.vn/den-led-spotlight-am-tran-8091/
 
 [www.youtube.com]
-match = -226.7%%
-title = 60 Giây Sáng - Ngày 15/07/2024 - HTV Tin Tức Mới Nhất 2024
-url = https://www.youtube.com/watch?v=JnwZcTdCnkc
+match = -213.3%%
+title = Dậy Sớm Cứu 1 Đời, 3 Việc Làm Vào Buổi Sáng Giúp Tâm ...
+url = https://www.youtube.com/watch?v=-8u62XtP7z8
 
 [dauthau.asia]
 match = -240.0%%
