--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-24 02:17:16
+lastsearch = 2024-07-24 02:27:38
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Chiếu lác D2 15
 url = https://www.diepxuan.com/chieu-lac-d2-15.html
 
 [www.facebook.com]
-match = -240.0%%
-title = Cơ sở thứ 6 Celadon Sports & Resort số 2, đường D2 , Sơn ...
-url = https://www.facebook.com/TheDucBangTamPhatTrienChieuCaoVaTheLucChoTreEm/videos/cơ-sở-thứ-6-celadon-sports-resort-số-2-đường-d2-sơn-kỳ-tân-phú-bố-mẹ-có-thể-đưa-/1798013050339107/
+match = -86.7%%
+title = PHOTOTIMEVietnam | Ho Chi Minh City
+url = https://www.facebook.com/phototimevn/
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -337,8 +337,8 @@ title = ĐẠI LÝ GIAO NƯỚC TẬN NHÀ QUẬN BÌNH THẠNH, LAVIE ...
 url = https://iwater.vn/tin-thi-truong/iwater-dai-ly-giao-nuoc-tan-nha-khach-hang-thuoc-du-an-la-bonita-so-6-8-duong-d2-phuong-15-quan-binh-thanh-tphcm-13453.html
 
 [www.axel-gl.com]
-match = -240.0%%
-title = ［Đã ngừng］HARWIN D2 2,54 mm, 15,24 mm Pitch dọc 28 cách ...
+match = -206.7%%
+title = ［Đã ngừng］HARWIN D2 2,54 mm, 15,24 mm Pitch dọc 28 ...
 url = https://www.axel-gl.com/vi-vn/asone/d/64-2588-77/
 
 [thtanthanh.phubinh.edu.vn]
@@ -382,8 +382,8 @@ title = Hướng dẫn cách cúng rước ông bà 30 Tết chuẩn, chi tiết
 url = https://dienmaycholon.com/kinh-nghiem-mua-sam/huong-dan-cach-cung-ruoc-ong-ba-30-tet-chuan-chi-tiet
 
 [vietnamese.alibaba.com]
-match = -226.7%%
-title = Bộ Câu Lạc Bộ Golf Dành Cho Phụ Nữ Với Chiều Dài Tùy Chỉnh
+match = -213.3%%
+title = Bộ Câu Lạc Bộ Golf Dành Cho Phụ Nữ Với Chiều Dài Tùy ...
 url = https://vietnamese.alibaba.com/product-detail/Golf-Club-Set-for-Lady-with-1600364285763.html
 
 [www.highlandscoffee.com.vn]
