--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-07-24 01:25:11
+lastsearch = 2024-07-24 02:25:52
 
 [chieutrelanlan.com]
 match = -41.7%%
@@ -57,9 +57,9 @@ title = Thế Giới Chiếu Trúc
 url = https://www.facebook.com/thegioichieutruc/
 
 [chieutrucsaigon.com]
-match = -14.3%%
-title = TIN TRONG NƯỚC
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/
+match = -12.5%%
+title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
+url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
 
 [www.xskthcm.com]
 match = -83.3%%
