--- a/images/man-re-xanh-16/config.ini
+++ b/images/man-re-xanh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-16.html
 lastopen = 2024-06-07 00:33:03
 
 [search]
-lastsearch = 2024-07-23 16:48:14
+lastsearch = 2024-07-24 02:26:16
 
 [www.accessdata.fda.gov]
 match = -142.9%%
@@ -152,9 +152,9 @@ title = mindbodygreen: well-rounded well-being for a life well lived
 url = https://www.mindbodygreen.com/
 
 [www.amazon.com]
-match = -135.7%%
-title = All Boys Aren't Blue: A Memoir-Manifesto
-url = https://www.amazon.com/All-Boys-Arent-Blue-Memoir-Manifesto/dp/0374312710
+match = -257.1%%
+title = eos Shea Better Body Lotion- Vanilla Cashmere, 24-Hour ...
+url = https://www.amazon.com/eos-Cashmere-Moisture-Lightweight-Non-Greasy/dp/B08KT2Z93D
 
 [fptshop.com.vn]
 match = -192.9%%
