--- a/images/nem-sieu-nhe-9f-18/config.ini
+++ b/images/nem-sieu-nhe-9f-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-18.html
 lastopen = 2024-06-09 23:55:48
 
 [search]
-lastsearch = 2024-07-23 23:54:51
+lastsearch = 2024-07-24 02:31:06
 
 [m.youtube.com]
 match = -144.4%%
@@ -72,9 +72,9 @@ title = U.S. DEPARTMENT OF COMMERCE National Technical ...
 url = https://www.ojp.gov/pdffiles1/Photocopy/93776NCJRS.pdf
 
 [m.facebook.com]
-match = -61.1%%
-title = Ăn vặt ngon Cali | 💥NEM NƯỚNG NHA TRANG
-url = https://m.facebook.com/groups/anvatngoncali/posts/8385390094807264/
+match = -77.8%%
+title = Cộng Đồng Người Việt Denver | 👉♥️Nem chua bò
+url = https://m.facebook.com/groups/2078029092481022/posts/3794938424123405/
 
 [www.proz.com]
 match = -183.3%%
@@ -117,9 +117,9 @@ title = Nem rán, chạo tôm của Việt Nam lọt top món ăn nhẹ ngon ...
 url = https://www.vietnam.vn/nem-ran-chao-tom-cua-viet-nam-lot-top-mon-an-nhe-ngon-nhat-the-gioi/
 
 [www.linkedin.com]
-match = 5.6%%
-title = NEM Furniture JSC's Post
-url = https://www.linkedin.com/posts/nemfurniturejsc_nem-nemfurniture-arevovietnam-activity-6908959978208534528-AOAy
+match = -144.4%%
+title = interior #furniture #tongthaunoithat #nem #nemfurniture
+url = https://www.linkedin.com/posts/nemfurniturejsc_interior-furniture-tongthaunoithat-activity-7048589527807913984-OsM1?trk=public_profile_like_view
 
 [forum.nameberry.com]
 match = -16.7%%
