--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-24 03:32:34
+lastsearch = 2024-07-24 03:51:22
 
 [hoa18.com]
 match = -84.2%%
@@ -67,8 +67,8 @@ title = using water in the nether | Water Splash
 url = https://www.tiktok.com/@camman.18/video/7278968159229512990
 
 [xlinhho.hagiang.gov.vn]
-match = -157.9%%
-title = Những doanh nghiệp đưa cây chè Bắc Quang vượt qua đại dịch ...
+match = -110.5%%
+title = Những doanh nghiệp đưa cây chè Bắc Quang vượt qua ...
 url = https://xlinhho.hagiang.gov.vn/-/nhung-doanh-nghiep-dua-cay-che-bac-quang-vuot-qua-dai-dich-covid-19
 
 [metruyencv.com]
