--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-07-24 02:17:50
+lastsearch = 2024-07-24 03:45:05
 
 [helloviettravel.com]
 match = -181.2%%
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = -143.8%%
-title = KINH DỊ 18 TẦNG ĐỊA NGỤC KHU DU LỊCH SUỐI TIÊN 2024
-url = https://www.youtube.com/watch?v=Z5uq2IjfDD8
+match = -193.8%%
+title = Du lịch Mỹ tự túc #5: Đừng đến Arizona một mình! USA trip
+url = https://www.youtube.com/watch?v=7v7EBziokmM
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
@@ -88,8 +88,8 @@ url = https://lienbangtravel.com/vi/tin-tuc/258-du-lich-my-khoi-dong-lai-sau-18-
 
 [www.klook.com]
 match = -168.8%%
-title = 42 Địa Điểm Du Lịch Gần Sài Gòn Cho Cuối Tuần Năng ...
-url = https://www.klook.com/vi/blog/diem-du-lich-gan-sai-gon/
+title = 35 Địa Điểm Du Lịch Mỹ Hấp Dẫn Cho Kỳ Nghỉ Dài - Klook
+url = https://www.klook.com/vi/blog/dia-diem-du-lich-my/
 
 [dulichviet.com.vn]
 match = -206.2%%
