--- a/images/chieu-lac-d2-14/config.ini
+++ b/images/chieu-lac-d2-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-14.html
 lastopen = 2024-06-21 06:28:49
 
 [search]
-lastsearch = 2024-07-24 02:17:37
+lastsearch = 2024-07-24 05:39:03
 
 [www.diepxuan.com]
 match = 33.3%%
@@ -62,9 +62,9 @@ title = Nhận biết - phân biệt: "Hạt lạc - Hạt đỗ". Lớp Nhà tr
 url = https://mngiaquat.longbien.edu.vn/hoat-dong-chuyen-mon-khoi-nha-tre/nhan-biet-phan-biet-hat-lac-hat-do-lop-nha-tre-d2/ctmb/9991/669168
 
 [shopee.vn]
-match = -226.7%%
-title = Bộ đồ nam cộc tay mặc hè DSQ cotton 4 chiều thêu logo ...
-url = https://shopee.vn/Bộ-đồ-nam-cộc-tay-mặc-hè-DSQ-cotton-4-chiều-thêu-logo-ngực-phối-in-hình-lá-phong-D2-monogram-BH119P-i.29600811.24469535417
+match = -206.7%%
+title = Trống Cajon AB-D2 có tay vặn chỉnh kèm EQ kết nối loa
+url = https://shopee.vn/Trống-Cajon-AB-D2-có-tay-vặn-chỉnh-kèm-EQ-kết-nối-loa-Tặng-bao-và-dây-jack-3m-i.37429989.9030570402
 
 [quangharvest.com]
 match = -186.7%%
@@ -87,9 +87,9 @@ title = D2 Club (Ma Cao, Trung Quốc) - Đánh giá - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attraction_Review-g664891-d4925838-Reviews-D2_Club-Macau.html
 
 [m.facebook.com]
-match = -200.0%%
-title = Ways Station Bình Thạnh: 🏠 281 Nguyễn Văn Đậu, P. ...
-url = https://m.facebook.com/waysstation/photos/a.179106562519975/1189872421443379/?type=3
+match = -226.7%%
+title = Thánh Riviu | CHIỀU 14/6, TP.HCM XUẤT HIỆN MƯA LỚN KÈM ...
+url = https://m.facebook.com/groups/riviu.official/posts/3598203903642867/
 
 [www.youtube.com]
 match = -133.3%%
@@ -385,4 +385,9 @@ url = https://vnbis.com/products/companies/
 match = 6.7%%
 title = HO CHI MINH CITY
 url = https://img.nordangliaeducation.com/resources/asia/_filecache/b26/be6/63445-welcome-to-hcmc--new-teachers-guide.pdf
+
+[www.circlek.com.vn]
+match = -186.7%%
+title = Hệ Thống cửa hàng Circle K Việt NamCircle K Việt Nam
+url = https://www.circlek.com.vn/vi/he-thong-circle-k/
 
