--- a/images/man-tu-bung-dinh-vuong18/config.ini
+++ b/images/man-tu-bung-dinh-vuong18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-dinh-vuong18.html
 lastopen = 2024-06-07 00:52:24
 
 [search]
-lastsearch = 2024-07-24 04:32:35
+lastsearch = 2024-07-24 05:33:45
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Mùng Tự Bung Đỉnh Vuông 1m8 x 2m Bảo Bảo
 url = https://www.mungbaobao.com/mung-tu-bung-dinh-vuong-1m8-x-2m-bao-bao.html
 
 [shopee.vn]
-match = -54.2%%
-title = Màn chụp vuông - Giá Tốt, Sale Tháng 07, Ship 0 Đồng
-url = https://shopee.vn/list/màn chụp/vuông
+match = -29.2%%
+title = màn chụp vuông giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp vuông
 
 [easydream.vn]
 match = -4.2%%
@@ -27,9 +27,9 @@ title = Màn chụp đỉnh vuông Cao Cấp EASY DREAM
 url = https://easydream.vn/man-chup-dinh-vuong-31-11.html
 
 [www.mantubung.com]
-match = -58.3%%
-title = Mùng Đỉnh Vuông Cao Cấp 1m8 x 2m x 1m7 CHÂN VIỀN
-url = https://www.mantubung.com/mung-chup-dinh-rong-1m8-x-2m-bao-bao-2-cua-67344.html
+match = -12.5%%
+title = Màn Tự Bung ĐỈNH VUÔNG 1m8 x 2m - VIỀN CHÂN - 1 CỬA
+url = https://www.mantubung.com/man-tu-bung-dinh-vuong-1m8-x-2m-x-1m8-85258.html
 
 [www.lazada.vn]
 match = -4.2%%
@@ -52,9 +52,9 @@ title = Màn ngủ tự bung đỉnh vuông cao cấp 1m8 x 2m
 url = https://vongxephaiphong.com/man-ngu-tu-bung-dinh-vuong-cao-cap-1m8-x-2m/sp/197
 
 [tiki.vn]
-match = -54.2%%
-title = Màn chụp tự bung đỉnh vuông cao cấp - Siêu tiện lợi cho ...
-url = https://tiki.vn/man-chup-tu-bung-dinh-vuong-cao-cap-sieu-tien-loi-cho-gia-dinh-gap-gon-de-dang-p107033053.html?spid=107033062
+match = -12.5%%
+title = Màn đỉnh vuông hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=màn đỉnh vuông
 
 [tuoitre.vn]
 match = -20.8%%
